Bug 125392 - CRASH: if Select Address List dialog has more than 1 element (gtk3)
Summary: CRASH: if Select Address List dialog has more than 1 element (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-05-20 14:20 UTC by Xisco Faulí
Modified: 2019-05-21 10:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-05-20 14:20:27 UTC
Steps to reproduce:
1. Open Writer
2. Tools - Mail Merge - Insert Address Block - Select Addess List
3. Add one ddbb
4. Add the same ddbb

-> Crash

reproduced in

Version: 6.3.0.0.alpha1+
Build ID: 9c7fac47aacb0877c7d212217089a680400c1377
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-05-20 14:21:34 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=56dd851cfc77c362c3db5c0aae4a490c7f6782cc


author	Caolán McNamara <caolanm@redhat.com>	2019-04-18 16:49:26 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-04-27 12:41:14 +0200
commit 56dd851cfc77c362c3db5c0aae4a490c7f6782cc (patch)
tree 0f5f6564e0b9af8123f4cebfe9a2f55c1bbbba57
parent 6afbe153ffd4cab27f0a7bb77f71f25923dc2e43 (diff)
weld cluster of change tracking dialogs

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 2 Xisco Faulí 2019-05-20 14:30:45 UTC
seems to be gtk3 only
Comment 3 Commit Notification 2019-05-20 16:28:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/12d6231045899534ce8ba5f7c273a1ae88f3804b%5E%21

Resolves: tdf#125392 null-deref

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-05-21 10:33:16 UTC
Verified in

Version: 6.3.0.0.alpha1+
Build ID: 38ac0586448d4f07811b139f62f62686b029feba
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!