Resolves: tdf#125392 null-deref

Change-Id: I7225c20148121b215ba09cf3ec1603f440ca2d7e
Reviewed-on: https://gerrit.libreoffice.org/72607
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>