vcl/unx/gtk3/gtk3gtkinst.cxx
@@ -6141,8 +6141,8 @@ namespace
         gtk_tree_sortable_get_sort_column_id(pSortable, &sort_column_id, nullptr);
         gtk_tree_model_get(pModel, a, sort_column_id, &pName1, -1);
         gtk_tree_model_get(pModel, b, sort_column_id, &pName2, -1);
-        gint ret = pSorter->compare(OUString(pName1, strlen(pName1), RTL_TEXTENCODING_UTF8),
-                                    OUString(pName2, strlen(pName2), RTL_TEXTENCODING_UTF8));
+        gint ret = pSorter->compare(OUString(pName1, pName1 ? strlen(pName1) : 0, RTL_TEXTENCODING_UTF8),
+                                    OUString(pName2, pName2 ? strlen(pName2) : 0, RTL_TEXTENCODING_UTF8));
         g_free(pName1);
         g_free(pName2);
         return ret;
